add warn states to expansion panel components

--- a/src/app/components/expansion-panel/expansion-panel.component.scss
+++ b/src/app/components/expansion-panel/expansion-panel.component.scss
@@ -1,3 +1,26 @@
+.exp-panel-container {
+  margin-top: 24px;
+}
+
+.exp-panel-label {
+  font-weight: 400;
+  font-size: 18px;  
+}
+
+.exp-panel-warning-text-container {  
+  margin-top: 12px;
+  height: 24px;
+}
+
+.exp-panel-warning-text {
+  color: #F44336;
+  font-weight: 500; 
+}
+
+.form-level {
+  font-size: 15px;
+}
+
 .accordion-parent {
   margin-bottom: 32px;
 }
